# cod3s

./: .gitignore  CLAUDE.md  CONVENTIONS.md  DEV_NOTES.md  FEAT_OBJFM_SPECS.md  Pipfile  README.md  aider_session.txt  docker-compose.yaml  mkdocs.yml  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml
cod3s/: .#version.py  __init__.py  core.py  kb.py  project.py  system.py  version.py
cod3s/pycatshoo/: __init__.py  automaton.py  common.py  component.py  deg_mode.py  fm_wiring.py  indicator.py  interactive_session.py  mode_law.py  sequence.py  study.py  system.py
cod3s/scripts/: __init__.py  _common.py  builders.py  run_cod3s_isimu.py  run_cod3s_seq.py  run_cod3s_study.py  study_runner.py
cod3s/specs/: __init__.py  study_yaml.py
cod3s/utils/: __init__.py  common.py  etl.py  logger.py  security.py
db/: crud.py  database.py
docs/: .gitignore  index.md
docs/api-reference/: system.md  utils.md
docs/brainstorms/: 2026-04-28-cod3s-isimu-brainstorm.md  2026-04-28-objfm-external-modes-brainstorm.md  2026-05-05-inst-transitions-brainstorm.md  2026-05-17-seq-tui-brainstorm.md  2026-07-20-objmode2s-brainstorm.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/plans/: 2026-04-28-feat-cod3s-isimu-cli-plan.md  2026-04-28-feat-objfm-external-rep-indep-pulse-model-plan.md  2026-04-28-feat-objfm-external-rep-indep-trigger-model-plan.md  2026-05-05-feat-inst-transitions-plan.md  2026-05-17-feat-seq-tui-plan.md  2026-07-20-feat-objmode2s-generic-two-state-engine-plan.md
docs/user-guide/: cod3s-seq.md  interactive-simulation.md  obj-deg-mode.md  obj-mode-2s.md  objfm-inst.md  seq-tui.md  sequence-analysis.md
examples/: basic_example.py
examples/bench_sequence_paths/: bench_paths.py
examples/ccf_sequence_asymmetry/: README.md  ccf_sequence_asymmetry.py
examples/cod3s_class_repr/: cod3s_pretty_print.py
examples/inst_coin_demo/: inst_coin_demo.py
examples/inst_panne_demo/: inst_panne_demo.py
examples/objdegmode_demo/: objdegmode_demo.py
examples/objfm_demo/: objfm_demo.py
examples/objfm_exp_demo/: objfm_exp_demo.py
examples/objfm_inst_demo/: objfm_inst_demo.py
examples/objfm_mix_demo/: objfm_mix_demo.py
examples/objfm_trans_based/: objfm_trans_based.py  test_example.py
examples/objfm_trigger_01_minimal/: objfm_trigger_01_minimal.py
examples/objfm_trigger_02_common_cause/: objfm_trigger_02_common_cause.py
examples/objfm_trigger_03_async_repair/: objfm_trigger_03_async_repair.py
examples/objfm_trigger_04_exp_manual/: objfm_trigger_04_exp_manual.py
examples/objfm_trigger_05_block_retrigger/: objfm_trigger_05_block_retrigger.py
examples/objfm_trigger_common/: objfm_trigger_common.py
examples/objmode2s_demo/: objmode2s_demo.py
models/: user.py
tests/: context.py  pytest.ini  test.py  test_core.py  test_describe_componentWithAutom.py  test_kb_001.py  test_pyc_iter_simu_001.py  test_pyc_iter_simu_002.py  test_pyc_iter_simu_003.py  test_pyc_system.py  test_pyc_system_001.py  test_pyc_system_002.py  test_pyc_system_003.py  test_system_001.py  test_system_bkd_pyc_001.py
tests/core/: test_core.py  (+3 more)
(+337 files in other folders)
