[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cod3s"
dynamic = ["version"]
description = "COmplexe Dynamic Stochastic System Simulation librairy"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Roland Donat", email = "roland.donat@gmail.com"},
]
maintainers = [
    {name = "Roland Donat", email = "roland.donat@edgemind.net"},
]
keywords = ["Modelling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9,<3.12"
dependencies = [
    "pandas==2.2.2",
    "pydantic==2.11.9",
    "xlsxwriter==3.0.9",
    "plotly==6.3.0",
    "lxml==5.3.0",
    "colored==1.4.4",
    "PyYAML==6.0.2",
    "semver==3.0.4",
    "kaleido==1.1.0",
    "tqdm==4.67.1",
]

[project.urls]
Homepage = "https://github.com/edgemind-sas/cod3s"
Repository = "https://github.com/edgemind-sas/cod3s"
Issues = "https://github.com/edgemind-sas/cod3s/issues"

[project.scripts]
run-cod3s-study = "cod3s.scripts.run_cod3s_study:main"

[tool.uv]
dev-dependencies = [
    "autopep8",
    "black",
    "flake8",
    "ipdb",
    "jedi",
    "packaging",
    "pycodestyle",
    "pydantic",
    "pyflakes",
    "pytest",
    "pytest-pythonpath",
    "pyyaml",
    "rope",
    "yapf",
    "gitpython",
    "jinja2",
    "ruff-lsp",
    "python-lsp-server",
    "pyright",
    "mypy",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools.dynamic]
version = {attr = "cod3s.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*", "log*", "*.tests*", "*.log*", "archive*", "docs*"]

# Dev tools configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
